--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
+    "reselect": "^5.1.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
