--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "axios": "^1.7.7",
@@ -16,11 +17,13 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "reselect": "^5.1.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
